Fix flexbox on safari

--- a/styles.css
+++ b/styles.css
@@ -57,7 +57,6 @@ body {
 }
 
 .l-home {
-    display: -webkit-inline-flex;
     display: -moz-inline-flex;
     display: -ms-inline-flex;
     display: -o-inline-flex;
